render multiple elements at a time, basic formatting issues, prevent text wrap

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,13 @@
 div {
-    height: 25px;
-    width: 100px;
-    font-size: 20px
+    height: 20px;
+    width: 450px;
+    font-size: 15px;
 }
 
-.text {
-    background-color: red
-}
-
-.photo {
-    background-color: orange
-}
-
-.link {
-    background-color: yellow
-}
-
-.video {
-    background-color: yellowgreen
-}
-
-.audio {
-    background-color: lightseagreen
-}
-
-.settings {
-    background-color: lightblue
+.innerElement {
+    border: 1px solid black;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 2px
 }
